# hw1

./: README.md  horn.cabal  stack.yaml
horn/: README.md
horn/.stack-work/: stack.sqlite3
horn/.stack-work/ghci/02dd7842/: cabal_macros.h
horn/.stack-work/ghci/2d50c1c3/: cabal_macros.h
horn/.stack-work/ghci/712e112c/: cabal_macros.h
horn/.stack-work/install/x86_64-osx/d2b28cbdf5fdccda4cee2b5f86b4ab96914dbe28c5e2365b31acab9e66e0886b/8.10.4/lib/x86_64-osx-ghc-8.10.4/: libHShorn-0.1.0.0-7KZhf9bXEgPCvMFOr6NNw3-ghc8.10.4.dylib  libHShorn-0.1.0.0-922e84b3uMg6rLzR9IH1wU-ghc8.10.4.dylib
horn/.stack-work/install/x86_64-osx/d2b28cbdf5fdccda4cee2b5f86b4ab96914dbe28c5e2365b31acab9e66e0886b/8.10.4/lib/x86_64-osx-ghc-8.10.4/horn-0.1.0.0-7KZhf9bXEgPCvMFOr6NNw3/Horn/: Monad.dyn_hi  Monad.hi
horn/.stack-work/install/x86_64-osx/d2b28cbdf5fdccda4cee2b5f86b4ab96914dbe28c5e2365b31acab9e66e0886b/8.10.4/lib/x86_64-osx-ghc-8.10.4/horn-0.1.0.0-7KZhf9bXEgPCvMFOr6NNw3/Horn/Bindings/: Z3.dyn_hi  Z3.hi
horn/.stack-work/install/x86_64-osx/d2b28cbdf5fdccda4cee2b5f86b4ab96914dbe28c5e2365b31acab9e66e0886b/8.10.4/lib/x86_64-osx-ghc-8.10.4/horn-0.1.0.0-922e84b3uMg6rLzR9IH1wU/Horn/: Monad.dyn_hi  Monad.hi
horn/.stack-work/install/x86_64-osx/d2b28cbdf5fdccda4cee2b5f86b4ab96914dbe28c5e2365b31acab9e66e0886b/8.10.4/pkgdb/: horn-0.1.0.0-7KZhf9bXEgPCvMFOr6NNw3.conf  package.cache
horn/src/: Main.hs
horn/src/Horn/VCGen/: VCGen.hs
horn/tests/neg/: abs.js  assume.js  inc.js  inc0.js  locks.js  max.js  stmt.js  test0.js  test1.js  while5-false.js  while5-init.js  while5-noninductive.js  while5-tooweak.js
horn/tests/pos/: abs.js  driver.js  ifassert.js  inc.js  inc0.js  locks-loops.js  locks.js  max.js  stmt.js  sum.js  sum2.js  test0.js  test1.js  twoloops.js  while-segments.js  while0.js  while5.js
src/Horn/: CmdLine.hs
src/Horn/Logic/: Clauses.hs
src/Horn/Nano/: Nano.hs
src/Horn/VCGen/: VCGen.hs
test/: ClausesSpec.hs  NanoSpec.hs  Spec.hs  VCGenSpec.hs  VerificationSpec.hs
tests/pos/: abs.js  sum2.js  while-segments.js  while0.js  while5.js
tests/pos-new/: case0.js
(+16 files in other folders)
