name:                horn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/horn#readme
license:             BSD3
license-file:        LICENSE
author:              Klaus v. Gleissenthall
maintainer:          k.freiherrvongleissenthal@vu.nl
copyright:           2020 Klaus v. Gleissenthall
category:            Formal Methods
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
    Horn.Bindings.Z3
    Horn.Logic.Clauses
    Horn.Monad
    Horn.VCGen.VCGen
    Horn.Nano.Nano
 
  hs-source-dirs: ., src
  build-depends:
    base >= 4.7 && < 5, z3, containers, mtl, transformers, language-ecmascript, pretty, parsec, unordered-containers, syb, hashable, ansi-wl-pprint, cmdargs, rainbow
  default-language: Haskell2010

executable horn
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, z3, containers, mtl, transformers, language-ecmascript, pretty, parsec, unordered-containers, syb, hashable, ansi-wl-pprint, cmdargs, rainbow
  other-modules:
    Horn.Bindings.Z3
    Horn.CmdLine
    Horn.Logic.Clauses
    Horn.Monad
    Horn.Nano.Nano
    Horn.VCGen.VCGen

test-suite horn-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ClausesSpec
      NanoSpec
      VCGenSpec
      VerificationSpec
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wno-type-defaults -Wno-redundant-constraints -Wno-unused-imports -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , horn
    , z3
    , containers
    , mtl
    , transformers
    , language-ecmascript
    , pretty
    , parsec
    , unordered-containers
    , syb
    , hashable
    , ansi-wl-pprint
    , cmdargs
    , rainbow
    , hspec
    , hrubric
    , HUnit
    , ansi-terminal
  default-language: Haskell2010
